fix homepage google-search button small screen bug

--- a/website/static/css/developers.css
+++ b/website/static/css/developers.css
@@ -3,6 +3,7 @@
     font-weight:300;
     color:#333;
     font-size: 18px;
+    padding-top: 64px
 }
 
 .project-description h3 {
@@ -15,4 +16,10 @@
     font-style: bold;
     font-weight: 600;
     color:#777;
+}
+
+@media (max-width: 980px) {
+    .project-description {
+      padding-top: 100px;
+    }
 }
